comments added, bg image remoed

--- a/index.html
+++ b/index.html
@@ -17,11 +17,16 @@
     <div class="container">
       <div class="clock-area">
         <div class="clock-container">
-          <img src="assets/clock.jpg" alt="" />
+          <!-- <img src="assets/clock.jpg" alt="" /> -->
+          <p class="digit twelve">12</p>
+          <p class="digit three">3</p>
+          <p class="digit six">6</p>
+          <p class="digit nine">9</p>
           <div id="seconds"></div>
           <div id="minutes"></div>
           <div id="hours"></div>
-          <!-- <div id="milli-seconds"></div> -->
+          <div id="milli-seconds"></div>
+          <div class="needles-center"></div>
           <div class="digital-time">00 : 00 : 00</div>
         </div>
         <div class="clock-controls">
