--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="styles/css/main.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
@@ -42,6 +42,6 @@
         </div>
       </div>
     </div>
-    <script src="index.js"></script>
+    <script src="scripts/index.js"></script>
   </body>
 </html>
